{
  "version": 4,
  "terraform_version": "0.15.3",
  "serial": 260,
  "lineage": "f04c303a-3816-6376-2fb6-7b6d20ab92cc",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_alb",
      "name": "cluster_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:loadbalancer/app/lab-alb/13195929962d2a2f",
            "arn_suffix": "app/lab-alb/13195929962d2a2f",
            "dns_name": "lab-alb-877693863.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:509440620700:loadbalancer/app/lab-alb/13195929962d2a2f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lab-alb",
            "security_groups": [
              "sg-03b608049e2d317fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-071118d43585f0309"
              },
              {
                "subnet_id": "subnet-0d5d38f75b2352da8"
              }
            ],
            "subnets": [
              "subnet-071118d43585f0309",
              "subnet-0d5d38f75b2352da8"
            ],
            "tags": {
              "produto": "tag-produto",
              "squad": "tag-squad",
              "tribo": "tag-tribo"
            },
            "tags_all": {
              "produto": "tag-produto",
              "squad": "tag-squad",
              "tribo": "tag-tribo"
            },
            "vpc_id": "vpc-064b45b3ebae5edb3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.cluster.aws_security_group.alb_sg",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:listener/app/lab-alb/13195929962d2a2f/8461c0cb04350a68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:targetgroup/lab-pedido/2d53f680b9301501",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509440620700:listener/app/lab-alb/13195929962d2a2f/8461c0cb04350a68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:loadbalancer/app/lab-alb/13195929962d2a2f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_alb.cluster_alb",
            "module.cluster.aws_security_group.alb_sg",
            "module.pedido.aws_alb_target_group.tg",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:security-group/sg-03b608049e2d317fc",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b608049e2d317fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-alb-sg",
            "name_prefix": "",
            "owner_id": "509440620700",
            "revoke_rules_on_delete": false,
            "tags": {
              "produto": "tag-produto",
              "squad": "tag-squad",
              "tribo": "tag-tribo"
            },
            "tags_all": {
              "produto": "tag-produto",
              "squad": "tag-squad",
              "tribo": "tag-tribo"
            },
            "timeouts": null,
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.front",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:targetgroup/lab-front/e1c3bd4ac8e90209",
            "arn_suffix": "targetgroup/lab-front/e1c3bd4ac8e90209",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509440620700:targetgroup/lab-front/e1c3bd4ac8e90209",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lab-front",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "dependencies": [
            "module.cluster.aws_alb.cluster_alb",
            "module.cluster.aws_security_group.alb_sg",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.front",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:targetgroup/lab-front/e1c3bd4ac8e90209",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:listener-rule/app/lab-alb/13195929962d2a2f/8461c0cb04350a68/8281a5bc94c9dd98",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/front*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509440620700:listener-rule/app/lab-alb/13195929962d2a2f/8461c0cb04350a68/8281a5bc94c9dd98",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:listener/app/lab-alb/13195929962d2a2f/8461c0cb04350a68",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_alb.cluster_alb",
            "module.cluster.aws_alb_listener.default",
            "module.cluster.aws_security_group.alb_sg",
            "module.front.aws_alb_target_group.tg",
            "module.pedido.aws_alb_target_group.tg",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.front",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:security-group/sg-0960ef50731ee8057",
            "description": "lab-front",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0960ef50731ee8057",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b608049e2d317fc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-front-sg",
            "name_prefix": "",
            "owner_id": "509440620700",
            "revoke_rules_on_delete": false,
            "tags": {
              "produto": "tag-produto",
              "squad": "tag-squad",
              "tribo": "tag-tribo"
            },
            "tags_all": {
              "produto": "tag-produto",
              "squad": "tag-squad",
              "tribo": "tag-tribo"
            },
            "timeouts": null,
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.alb_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.front",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_alb_access_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3071286600",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0960ef50731ee8057",
            "self": false,
            "source_security_group_id": "sg-03b608049e2d317fc",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.alb_sg",
            "module.front.aws_security_group.service_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.pedido",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:targetgroup/lab-pedido/2d53f680b9301501",
            "arn_suffix": "targetgroup/lab-pedido/2d53f680b9301501",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/check",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509440620700:targetgroup/lab-pedido/2d53f680b9301501",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "lab-pedido",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "dependencies": [
            "module.cluster.aws_alb.cluster_alb",
            "module.cluster.aws_security_group.alb_sg",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.pedido",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:targetgroup/lab-pedido/2d53f680b9301501",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:listener-rule/app/lab-alb/13195929962d2a2f/8461c0cb04350a68/1e0bed27f3ea4ae7",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api*",
                      "/swagger*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:509440620700:listener-rule/app/lab-alb/13195929962d2a2f/8461c0cb04350a68/1e0bed27f3ea4ae7",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:509440620700:listener/app/lab-alb/13195929962d2a2f/8461c0cb04350a68",
            "priority": 2,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_alb.cluster_alb",
            "module.cluster.aws_alb_listener.default",
            "module.cluster.aws_security_group.alb_sg",
            "module.pedido.aws_alb_target_group.tg",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.pedido",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:security-group/sg-099faafd7d5b989a4",
            "description": "lab-pedido",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-099faafd7d5b989a4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b608049e2d317fc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "lab-pedido-sg",
            "name_prefix": "",
            "owner_id": "509440620700",
            "revoke_rules_on_delete": false,
            "tags": {
              "produto": "tag-produto",
              "squad": "tag-squad",
              "tribo": "tag-tribo"
            },
            "tags_all": {
              "produto": "tag-produto",
              "squad": "tag-squad",
              "tribo": "tag-tribo"
            },
            "timeouts": null,
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.alb_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.pedido",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "service_alb_access_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2209690043",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-099faafd7d5b989a4",
            "self": false,
            "source_security_group_id": "sg-03b608049e2d317fc",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.aws_security_group.alb_sg",
            "module.pedido.aws_security_group.service_sg",
            "module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0b313faf6e3b13e9f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-195-83-58.compute-1.amazonaws.com",
            "public_ip": "34.195.83.58",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:internet-gateway/igw-0ce25c03d14ca0d3c",
            "id": "igw-0ce25c03d14ca0d3c",
            "owner_id": "509440620700",
            "tags": {
              "Name": "lab"
            },
            "tags_all": {
              "Name": "lab"
            },
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b313faf6e3b13e9f",
            "id": "nat-0861b9c73c56d92fd",
            "network_interface_id": "eni-05474db8aa6b745c9",
            "private_ip": "10.0.101.119",
            "public_ip": "34.195.83.58",
            "subnet_id": "subnet-0d5d38f75b2352da8",
            "tags": {
              "Name": "lab-us-east-1a"
            },
            "tags_all": {
              "Name": "lab-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08e0bc1fe9b1d95871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0861b9c73c56d92fd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08e0bc1fe9b1d9587",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ce25c03d14ca0d3c",
            "id": "r-rtb-0fb80d83505b9b5481080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fb80d83505b9b548",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:route-table/rtb-08e0bc1fe9b1d9587",
            "id": "rtb-08e0bc1fe9b1d9587",
            "owner_id": "509440620700",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab-private"
            },
            "tags_all": {
              "Name": "lab-private"
            },
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:route-table/rtb-0fb80d83505b9b548",
            "id": "rtb-0fb80d83505b9b548",
            "owner_id": "509440620700",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "lab-public"
            },
            "tags_all": {
              "Name": "lab-public"
            },
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f66eb9e8e78c04b5",
            "route_table_id": "rtb-08e0bc1fe9b1d9587",
            "subnet_id": "subnet-0e243a57958c4aa36"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5838f9864595f56",
            "route_table_id": "rtb-08e0bc1fe9b1d9587",
            "subnet_id": "subnet-01b40ad5641f79ce6"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01be1d73710f1193d",
            "route_table_id": "rtb-0fb80d83505b9b548",
            "subnet_id": "subnet-0d5d38f75b2352da8"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049dfa37a245eb993",
            "route_table_id": "rtb-0fb80d83505b9b548",
            "subnet_id": "subnet-071118d43585f0309"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:subnet/subnet-0e243a57958c4aa36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e243a57958c4aa36",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509440620700",
            "tags": {
              "Name": "lab-private-us-east-1a"
            },
            "tags_all": {
              "Name": "lab-private-us-east-1a"
            },
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:subnet/subnet-01b40ad5641f79ce6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01b40ad5641f79ce6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "509440620700",
            "tags": {
              "Name": "lab-private-us-east-1c"
            },
            "tags_all": {
              "Name": "lab-private-us-east-1c"
            },
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:subnet/subnet-0d5d38f75b2352da8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0d5d38f75b2352da8",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509440620700",
            "tags": {
              "Name": "lab-public-us-east-1a"
            },
            "tags_all": {
              "Name": "lab-public-us-east-1a"
            },
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:subnet/subnet-071118d43585f0309",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-071118d43585f0309",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509440620700",
            "tags": {
              "Name": "lab-public-us-east-1c"
            },
            "tags_all": {
              "Name": "lab-public-us-east-1c"
            },
            "vpc_id": "vpc-064b45b3ebae5edb3"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509440620700:vpc/vpc-064b45b3ebae5edb3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05917d8add890a35f",
            "default_route_table_id": "rtb-07ea77feb2d5493ef",
            "default_security_group_id": "sg-054b5ba9f8a15e2b8",
            "dhcp_options_id": "dopt-d3c5c3a8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-064b45b3ebae5edb3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07ea77feb2d5493ef",
            "owner_id": "509440620700",
            "tags": {
              "Name": "lab"
            },
            "tags_all": {
              "Name": "lab"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}